Fixed minor bug in spacing helpers --> missing padding spacing helpers

--- a/scss/helpers/spacing.scss
+++ b/scss/helpers/spacing.scss
@@ -22,16 +22,20 @@ $spacing-values: ("0": 0px, "1": 5px, "2": 10px, "3": 15px, "4": 25px, "5": 45px
             //Check for adding horizontal spacings
             @if $spacing-horizontal == true {
                 &#{$sk}x-#{$vk} {
-                    margin-left: $vv !important;
-                    margin-right: $vv !important;
+                    #{$sv}-left: $vv !important;
+                    #{$sv}-right: $vv !important;
                 }
             }
             //Check for adding vertical spacings
             @if $spacing-vertical == true {
                 &#{$sk}y-#{$vk} {
-                    margin-top: $vv !important;
-                    margin-bottom: $vv !important;
+                    #{$sv}-top: $vv !important;
+                    #{$sv}-bottom: $vv !important;
                 }
+            }
+            //Add all positions
+            &#{$sk}-#{$vk} {
+                #{$sv}: $vv !important;
             }
             //Add positions
             @each $pk,$pv in $spacing-positions {
